--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "botngbayan-api",
   "version": "1.0.0",
   "description": "",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/src/index.js\"",
+    "dev": "npx tsc && node dist/src/index.js",
     "start": "node dist/src/index.js"
   },
   "repository": {
@@ -20,13 +18,19 @@
   },
   "homepage": "https://github.com/noisyass2/botngbayan-api#readme",
   "dependencies": {
+    "@twurple/api": "^5.2.0",
+    "@twurple/auth": "^5.2.0",
     "@types/node-fetch": "^2.6.2",
+    "@types/pg": "^8.6.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
     "concurrently": "^7.3.0",
