--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tsc && node dist/src/index.js",
+    "dev": "tsc && node dist/src/index.js",
     "start": "node dist/src/index.js"
   },
   "repository": {
