--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
+    "moment": "^2.30.1",
     "node-fetch": "^2.6.7",
     "pg": "^8.7.3"
   },
